fix: removing gap

--- a/src/components/elements/Card/styles.css
+++ b/src/components/elements/Card/styles.css
@@ -8,7 +8,6 @@
     align-items: center;
     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
     background-color: var(--table-head-color);
-    margin: 10px;
 }
 .card-image {
     height: 90%;
